Add restrictions on grid form

--- a/css/project.css
+++ b/css/project.css
@@ -1,5 +1,4 @@
 
-
 #form{
      position: static;
      display: none;
@@ -9,7 +8,7 @@
  }
  
 
-#showbtn,#submitgrid,#showfilter,#calculator,#reset {
+#showbtn,#submitgrid,#showfilter,#calculator,#reset,#resetform {
     background: rgba(180, 170, 170, 0.233); 
     /*background-image: linear-gradient(to bottom, #eb94d0, #2079b0);
 */
@@ -19,13 +18,14 @@ width:150px;
 border-radius: 6px; 
 border:0px;
 }
-#showbtn:hover ,#reset:hower    ,#submitgrid:hover,#showfilter:hover,#calculator:hover{
+#showbtn:hover ,#reset:hover,#submitgrid:hover,#showfilter:hover,#calculator:hover{
     background: #750d0d94;
       }
 
 
 
 input[type=text] {
+
     width:180px;
     padding: 10px 20px;
     margin: 8px 0;
@@ -35,6 +35,30 @@ input[type=text] {
     border:15px;
     border-radius: 10px;
 }
+input  {
+
+    width:180px;
+    padding: 10px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.151);
+    color:white;
+    border:15px;
+    border-radius: 10px;
+}
+
+input[type=number] {
+
+    width:180px;
+    padding: 10px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.151);
+    color:white;
+    border:15px;
+    border-radius: 10px;
+}
+
 
 
 #catalog{
@@ -96,7 +120,22 @@ footer{
 
 
 hr{
-    margin: 0px 0;
+    margin:     0px 0;
     border: 1px solid rgba(255, 0, 0, 0.151);
+}
+
+fieldset {
+    padding:16px;
+    border:1px solid rgba(138, 138, 138, 0.384);
+    width:1000px;
+    margin:auto;
+    text-align: center;
+
+
+}
+
+legend{
+    color:rgba(255, 0, 0, 0.425);
+    text-align:left; 
 }
 
