--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,29 @@
 
-     
+   *{
+       margin:0;
+       padding:0;
+   }  
+
+   html, body{
+       height:100%;
+   }
+
 .main{
+    overflow: auto;
+       padding-bottom:100px;
     margin: 0px;
     padding:0px;
     text-align: center;
     background-image: url(back.jpg);
     background-size:12vh;
     font-weight: 200;
+    min-height: 100%;
     font-family: "Source Code Pro Extralight";
 }
 
+.clearfix {
+    overflow: auto;
+}
 .container {
     width:80%;
     margin-left: 25px;
@@ -106,11 +120,16 @@ nav a::before {
 
   footer{
     color:rgba(184, 186, 190, 0.815);
+    position: relative;
+
+    height:100px;
+    margin-top: -100px;
+    clear:both;
     right: 0;
-    bottom: 30px;
     left: 0;
     text-align: center;
     font-size: .8em;
+    overflow: hidden;
   }
   
 
